[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "excel-mcp-server"
version = "0.1.0"
description = "Fast Excel MCP Server with multi-sheet, multi-granularity retrieval"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.3.0",
    "python-calamine>=0.2.0",
    "openpyxl>=3.1.0",
]

[project.scripts]
excel-mcp-server = "excel_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/excel_mcp"]
